--- a/game6.html
+++ b/game6.html
@@ -25,7 +25,7 @@
       <a href="help.html" class="link">Help</a>
     </nav>
     <div class="mapholder">
-      <img class="map" src="foto/texel8.PNG" alt="texel" />
+      <img class="map" src="foto/texel8.png" alt="texel" />
     </div>
     <div class="arrow">
       <a><i class="fas fa-arrow-left"></i></a>
